--- a/src/www/home.html
+++ b/src/www/home.html
@@ -1,86 +1,16 @@
 <html>
   <head>
-    <title>Web application powered by Dashboard with Organizations</title>
+    <title>Web application powered by Dashboard</title>
     <link href="/public/pure-min.css" rel="stylesheet" />
     <link href="/public/content.css" rel="stylesheet" />
+    <link href="/public/content-additional.css" rel="stylesheet" />
     <template id="navbar">
       <a href="/home"><img src="/public/home.svg" title="Home" /><span>Home</span></a>
     </template>
     <base target="_top" href="/" />
   </head>
   <body>
-    <h1>Web application powered by Dashboard with Maxmind Geoip</h1>
-    <p>Your Dashboard server is ready.  You just registered and signed in on it.  On the top right you will see your account menu, and if you were the first user to register you will be the owner and the administrator menu will be visible too.</p>  
-    <p>Your Dashboard server needs to be configured to point to your application server. It will fetch content from your application server to serve to users.</p>
-<pre>$ APPLICATION_SERVER_TOKEN="this is the token" \
-  APPLICATION_SERVER="http://localhost:3000" \
-  DASHBOARD_SERVER="http://localhost:8001" \
-  node main.js</pre>
-    <h2>About the Maxmind Geoip module</h2>
-    <p>This module can convert the user's IP address to information about their country.  A server handler binds the user's IP address from the various ways it can be described and binds it to the req object.</p>
-    <pre>req.ip = '1.2.3.4' (see bind-country.js)</pre>
-    <p>The API returns country information about the req.ip address:</p>
-    <pre>{
-  continent: {
-    code: 'NA',
-    geoname_id: 6255149,
-    names: {
-      de: 'Nordamerika',
-      en: 'North America',
-      es: 'Norteamérica',
-      fr: 'Amérique du Nord',
-      ja: '北アメリカ',
-      'pt-BR': 'América do Norte',
-      ru: 'Северная Америка',
-      'zh-CN': '北美洲'
-    }
-  },
-  country: {
-    geoname_id: 6252001,
-    iso_code: 'US',
-    names: {
-      de: 'USA',
-      en: 'United States',
-      es: 'Estados Unidos',
-      fr: 'États-Unis',
-      ja: 'アメリカ合衆国',
-      'pt-BR': 'Estados Unidos',
-      ru: 'США',
-      'zh-CN': '美国'
-    }
-  },
-  registered_country: {
-    geoname_id: 6252001,
-    iso_code: 'US',
-    names: {
-      de: 'USA',
-      en: 'United States',
-      es: 'Estados Unidos',
-      fr: 'États-Unis',
-      ja: 'アメリカ合衆国',
-      'pt-BR': 'Estados Unidos',
-      ru: 'США',
-      'zh-CN': '美国'
-    }
-  }
-}</pre>
-    <h2>Setting up your application server</h2>
-    <ul>
-      <li>Verify requests come from your Dashboard, yourself or using eg <a href="https://github.com/userdashboard/express-application-server">Express application server middleware</a>.</li>
-      <li>Replace this page with your application server providing content for <code>/home</code>.</li>
-      <li>Replace this page with your application server providing guest content for <code>/</code>.</li>
-    </ul>
-    <h2>Dashboard documentation links</h2>
-    <ul>
-      <li><a href="https://userdashboard.github.io/developers/">Developer documentation</a></li>
-      <li><a href="https://userdashboard.github.io/administrators/">Administrator documentation</a></li>
-      <li><a href="https://userdashboard.github.io/users/">User documentation</a></li>
-    </ul>
-    <h2>Dashboard integration examples</h2>
-    <p><a href="https://github.com/seejohnrun/haste-server">Hastebin</a> is an open source pastebin web application.  It started as a service for anonymous guests only, and was transformed with Dashboard and modules into a web application for registered users, with support for sharing posts with organizations and paid subscriptions.</p>
-    <ul>
-      <li><a href="https://github.com/userdashboard/integration-examples/blob/master/hastebin/hastebin-saas-free.md">Free website</a></li>
-      <li><a href="https://github.com/userdashboard/integration-examples/blob/master/hastebin/hastebin-saas-subscription.md">Paid subscription website</a></li>
-    </ul>
+    <h1>Application home page</h1>
+    <p>Your dashboard server is ready to run.</p>
   </body> 
 </html>
