--- a/src/www/index.html
+++ b/src/www/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-auth="false" data-template="false">
   <head>
     <meta charset="utf-8" /> 
-    <title translate="yes">Dashboard + Organizations</title>
+    <title>Dashboard + MaxMind GeoIP</title>
     <link href="/public/pure-min.css" rel="stylesheet">
     <style>
       body {
@@ -47,7 +47,7 @@
     <h1>
       <a class="pure-button pure-button-primary" href="/account/signin">Sign in</a>
       <a class="pure-button pure-button-primary" href="/account/register">Register</a>
-      Dashboard + Organizations
+      Dashboard + MaxMind GeoIP
     </h1>
     <div class="mast">
       <h2>Build web apps faster with Dashboard</h2>
